# shira

./: .envrc  .gitignore  README.md  flake.nix  pkg.nix  pyproject.toml
shiradl/: cli.py  dl.py  mbtag.py  metadata.py  musicbrainz.py  tagging.py  util.py
